<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:title="Servicios">
        <menu>
            <item
                android:id="@+id/CapturarPlaca"
                android:fontFamily="@font/livvic_medium"
                android:icon="@drawable/ic_camera"
                android:title="@string/menu_camera"></item>
            <item
                android:id="@+id/Registros"
                android:fontFamily="@font/livvic_medium"
                android:icon="@drawable/ic_registros"
                android:title="@string/menu_registros"></item>
            <item
                android:id="@+id/Reportes"
                android:fontFamily="@font/livvic_medium"
                android:icon="@drawable/ic_alert"
                android:title="@string/menu_reportes"></item>
        </menu>
    </item>
    <item android:title="General">
        <menu>
            <item
                android:id="@+id/Perfil"
                android:fontFamily="@font/livvic_medium"
                android:icon="@drawable/ic_account"
                android:title="@string/perfil"></item>
            <item
                android:id="@+id/CerrarSesion"
                android:fontFamily="@font/livvic_medium"
                android:icon="@drawable/ic_logout"
                android:title="@string/menu_cerrarsesion"></item>
        </menu>
    </item>

</menu>